check.log
    Checking ranvier-http v0.14.3 (F:\project\ranvier\ranvier-workspace\ranvier\http)
warning: unused imports: `Response` and `header::CONTENT_TYPE`
 --> http\src\sse.rs:2:12
  |
2 | use http::{header::CONTENT_TYPE, Response};
  |            ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `BodyExt` and `StreamBody`
 --> http\src\sse.rs:3:22
  |
3 | use http_body_util::{StreamBody, BodyExt};
  |                      ^^^^^^^^^^  ^^^^^^^

warning: unused import: `StreamExt`
 --> http\src\sse.rs:7:36
  |
7 | use futures_util::stream::{Stream, StreamExt};
  |                                    ^^^^^^^^^

error[E0271]: expected `{async block@http\src\ingress.rs:1398:26: 1398:36}` to be a future that resolves to `Response<BoxBody<Bytes, Infallible>>`, but it resolves to `Response<BoxBody<Bytes, !>>`
    --> http\src\ingress.rs:1398:17
     |
1398 | /                 Box::pin(async move {
1399 | |                     Response::builder()
1400 | |                         .status(StatusCode::OK)
1401 | |                         .body(Full::new(Bytes::from("Intervention accepted")).map_err(|never| match never {}).boxed())
1402 | |                         .unwrap()
1403 | |                 }) as Pin<Box<dyn Future<Output = HttpResponse> + Send>>
     | |__________________^ expected `Response<BoxBody<Bytes, Infallible>>`, found `Response<BoxBody<Bytes, !>>`
     |
     = note: expected struct `Response<BoxBody<_, Infallible>>`
                found struct `Response<BoxBody<_, !>>`
     = note: required for the cast from `Pin<Box<{async block@http\src\ingress.rs:1398:26: 1398:36}>>` to `Pin<Box<dyn Future<Output = Response<BoxBody<Bytes, ...>>> + Send>>`
     = note: the full name for the type has been written to 'F:\project\ranvier\ranvier-workspace\ranvier\target\debug\deps\ranvier_http-cb224262a2ab62c1.long-type-13792898191846298386.txt'
     = note: consider using `--verbose` to print the full type name to the console

warning: variable does not need to be mutable
    --> http\src\ingress.rs:1565:25
     |
1565 |                     let mut res = (entry.handler)(parts, &resources).await;
     |                         ----^^^
     |                         |
     |                         help: remove this `mut`
     |
     = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
    --> http\src\ingress.rs:1579:25
     |
1579 |                     let mut res = route_service.oneshot(req).await;
     |                         ----^^^
     |                         |
     |                         help: remove this `mut`

warning: variable does not need to be mutable
    --> http\src\ingress.rs:1599:21
     |
1599 |                 let mut fallback_res = if let Some(ref fb) = fallback {
     |                     ----^^^^^^^^^^^^
     |                     |
     |                     help: remove this `mut`

For more information about this error, try `rustc --explain E0271`.
warning: `ranvier-http` (lib) generated 6 warnings
error: could not compile `ranvier-http` (lib) due to 1 previous error; 6 warnings emitted
